--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.env
+.env.local
+.env.*.local
+*.log
+tests.test
+bin/
+dist/
+*.out
+
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
@@ -30,3 +39,4 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+CLAUDE.md
